--- a/index.html
+++ b/index.html
@@ -2,10 +2,92 @@
 <html lang="en">
 <head>
     <meta charset="UTF-8">
-    <meta name="viewport" content="width=<device-width>, initial-scale=1.0">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Document</title>
+    <link rel="stylesheet" href="style.css">
+    <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0/css/bootstrap.min.css" integrity="sha384-Gn5384xqQ1aoWXA+058RXPxPg6fy4IWvTNh0E263XmFcJlSAwiGgFAW/dAiS6JXm" crossorigin="anonymous">
+    <script src="https://ajax.googleapis.com/ajax/libs/angularjs/1.6.9/angular.min.js"></script>
+    <script src="myscript.js"></script>
+    <script type="text/javascript" src="https://cdn.fusioncharts.com/fusioncharts/latest/fusioncharts.js"></script>
+    <!-- Including the angularjs-fusioncharts directive-->
+    <script type="text/javascript" src="https://unpkg.com/angularjs-fusioncharts@4.0.1/dist/angular-fusioncharts.js"></script>
+    <!-- Including the fusion theme -->
+    <script type="text/javascript" src="https://cdn.fusioncharts.com/fusioncharts/latest/themes/fusioncharts.theme.fusion.js"></script>
+  
+     <script src="http://code.highcharts.com/highcharts.js"></script>
+    <script src="chart.js"></script>
+
 </head>
-<body>
-    <h1>Arthav bhavsar</h1>
+<body ng-app="myApp" ng-controller="myCtrl">
+     <div class="jumbotron">
+         <div class="container">
+         	<div class="row text-center">
+         		<div class="col-md-4">
+         			<div class="card bg-warning text-white">
+         				<div class="card-body">
+         					<h3>Confiremd cases</h3>
+         					<h3>{{all_data.confirmed.value}}</h3>
+         				</div>
+         			</div>
+         		</div>
+         		<div class="col-md-4">
+         			<div class="card bg-success text-white">
+         				<div class="card-body">
+         					<h3>Recovered cases</h3>
+         					<h3>{{all_data.recovered.value}}</h3>
+         				</div>
+         			</div>
+         		</div>
+         		<div class="col-md-4">
+         			<div class="card bg-danger text-white">
+         				<div class="card-body">
+         					<h3>Death cases</h3>
+         					<h3>{{all_data.deaths.value}}</h3>
+         				</div>
+         			</div>
+         		</div>
+         	</div>
+
+
+         	<input type="text" class="form-control mt-4" placeholder="enter country" ng-model="c" ng-change="get_c_data()">
+
+
+         	<div class="row text-center mt-4">
+         		<div class="col-md-4">
+         			<div class="card bg-warning text-white">
+         				<div class="card-body">
+         					<h3>Confiremd cases</h3>
+         					<h3>{{c_data.confirmed.value}}</h3>
+         				</div>
+         			</div>
+         		</div>
+         		<div class="col-md-4">
+         			<div class="card bg-success text-white">
+         				<div class="card-body">
+         					<h3>Recovered cases</h3>
+         					<h3>{{c_data.recovered.value}}</h3>
+         				</div>
+         			</div>
+         		</div>
+         		<div class="col-md-4">
+         			<div class="card bg-danger text-white">
+         				<div class="card-body">
+         					<h3>Death cases</h3>
+         					<h3>{{c_data.deaths.value}}</h3>
+         				</div>
+         			</div>
+         		</div>
+         	</div>
+
+<div ng-controller="myCtrl">
+<div fusioncharts id="my-chart-id" width="700" height="400" type="column2d" dataSource="{{myDataSource}}">
+
+           
+         </div>
+     </div>
+    <script src="https://code.jquery.com/jquery-3.2.1.slim.min.js" integrity="sha384-KJ3o2DKtIkvYIK3UENzmM7KCkRr/rE9/Qpg6aAZGJwFDMVNA/GpGFF93hXpG5KkN" crossorigin="anonymous"></script>
+<script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.12.9/umd/popper.min.js" integrity="sha384-ApNbgh9B+Y1QKtv3Rn7W3mgPxhU9K/ScQsAP7hUibX39j7fakFPskvXusvfa0b4Q" crossorigin="anonymous"></script>
+<script src="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0/js/bootstrap.min.js" integrity="sha384-JZR6Spejh4U02d8jOt6vLEHfe/JQGiRRSQQxSfFWpi1MquVdAyjUar5+76PVCmYl" crossorigin="anonymous"></script>
+<script src="https://cdnjs.cloudflare.com/ajax/libs/angular-google-chart/1.0.0-beta.1/ng-google-chart.min.js" type="text/javascript"></script>
 </body>
 </html>
